[metadata]
name = fixorchestra
version = 0.0.1
author = Gary Hughes
author_email = garyedwardhughes@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GaryHughes/fixorchestra
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    fixorchestration = fixorchestra.orchestration:main
    fixaudit = fixaudit.fixaudit:main
    fixreporc = fixreptorc.fixreptorc:main
    fixrepository = fixrepository.repository:main
